Blender crashes when creating Environment Map textures in Multi-View mode #45715

Closed
opened 2015-08-07 02:10:15 +02:00 by Mircea Kitsune · 12 comments

System Information
Linux openSUSE 13.2 x64, ATI Radeon 6870, MESA 10.3.7.

Blender Version
Broken: 2.75a
Worked: Unknown

Short description of error
Blender crashes when using multi-view (stereoscopic rendering) if an environment map texture is also being produced. The crash happens during the "Creating Environment maps" stage before rendering begins.

Exact steps for others to reproduce the error
1 - Create a texture of type Environment Map. Set it to Animated, Mapping to Cube, and Viewport Object to the camera. Make sure Shading - Environment Map is also enabled in the Render panel.

2 - Enable Render Layers - Views to turn on stereoscopic rendering (the viewport should become anaglyph).

3 - Press F12 to render and produce the crash.

**System Information** Linux openSUSE 13.2 x64, ATI Radeon 6870, MESA 10.3.7. **Blender Version** Broken: 2.75a Worked: Unknown **Short description of error** Blender crashes when using multi-view (stereoscopic rendering) if an environment map texture is also being produced. The crash happens during the "Creating Environment maps" stage before rendering begins. **Exact steps for others to reproduce the error** 1 - Create a texture of type Environment Map. Set it to Animated, Mapping to Cube, and Viewport Object to the camera. Make sure Shading - Environment Map is also enabled in the Render panel. 2 - Enable Render Layers - Views to turn on stereoscopic rendering (the viewport should become anaglyph). 3 - Press F12 to render and produce the crash.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @MirceaKitsune

Added subscriber: @MirceaKitsune

Added subscriber: @tyoc213

Added subscriber: @tyoc213
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Member

Please post a .blend file that shows the issue

Please post a .blend file that shows the issue
Author

The issue is so quick to reproduce, I figured one wouldn't be needed. But here it is: Simply press F12 and Blender should crash.

http://www.pasteall.org/blend/37469

The issue is so quick to reproduce, I figured one wouldn't be needed. But here it is: Simply press F12 and Blender should crash. http://www.pasteall.org/blend/37469
Member

Post .blend here untitled.blend

Post .blend here [untitled.blend](https://archive.blender.org/developer/F221414/untitled.blend)
Dalai Felinto was assigned by Aaron Carlisle 2015-08-07 18:49:36 +02:00

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by e96e0ddbee

This issue was referenced by e96e0ddbee89e4ccce3e0673883625aa73cc949a

The environment map is being rendered once per view. This is not ideal. But at least it doesn't crash now. Let me know if it works as expected.

The environment map is being rendered once per view. This is not ideal. But at least it doesn't crash now. Let me know if it works as expected.
Author

That should not be a huge problem, and it's probably the only working solution to begin with. First of all because you'd get double stereoscopy if both the 3D surface and envmap texture are stereoscopic, and envmaps are typically cubes so things like eye convergence are probably not applicable. I don't have Blender set up to compile here, so I'll try the fix once 2.75b or 2.76 are out. Thank you for solving this.

That should not be a huge problem, and it's probably the only working solution to begin with. First of all because you'd get double stereoscopy if both the 3D surface and envmap texture are stereoscopic, and envmaps are typically cubes so things like eye convergence are probably not applicable. I don't have Blender set up to compile here, so I'll try the fix once 2.75b or 2.76 are out. Thank you for solving this.

You can try a build from builder.blender.org

You can try a build from builder.blender.org
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45715
No description provided.