Fix T45715: Blender crashes when creating Environment Map textures in Multi-View mode